--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "preconstruct": {},
+  "publishConfig": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/1206497655/changesets-test.git"
