--- a/packages/packages-b/package.json
+++ b/packages/packages-b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@changesets-test/package-b",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
