--- a/packages/packages-a/package.json
+++ b/packages/packages-a/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@changesets-test/package-a",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
