--- a/packages/packages-a/package.json
+++ b/packages/packages-a/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@changesets-test/package-a",
   "version": "3.0.0",
-  "private": true,
+  "private": false,
   "description": "",
   "main": "index.js",
   "scripts": {
