--- a/packages/packages-a/package.json
+++ b/packages/packages-a/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@changesets-test/package-a",
+  "name": "@lyucan/package-a",
   "version": "3.0.0",
   "private": false,
   "description": "",
