--- a/packages/packages-b/package.json
+++ b/packages/packages-b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@changesets-test/package-b",
-  "version": "2.0.0",
+  "name": "@changesets/package-b",
+  "version": "1.0.0",
   "private": false,
   "description": "",
   "main": "index.js",
