--- a/projects/app/package.json
+++ b/projects/app/package.json
@@ -8,10 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@changesets/package-a": "workspace:^1.0.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "test-ui": "workspace:^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
