--- a/packages/packages-a/package.json
+++ b/packages/packages-a/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "test-ui",
-  "version": "2.0.0",
-  "description": "qqq",
+  "name": "packages-a",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC"
 }
