--- a/packages/packages-a/package.json
+++ b/packages/packages-a/package.json
@@ -1,7 +1,7 @@
 {
   "name": "packages-a",
-  "version": "1.0.2",
-  "description": "fasdfasd",
+  "version": "2.0.0",
+  "description": "fasdfasdaaa",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
